[gd_scene load_steps=42 format=3 uid="uid://dgsm7vqcxipqs"]

[ext_resource type="Script" path="res://code/player.gd" id="1_el2b0"]
[ext_resource type="Resource" uid="uid://bh4f2h53dvsy6" path="res://code/inventory/player_inventory.tres" id="2_2ntxu"]
[ext_resource type="Texture2D" uid="uid://ng37o0ee1v16" path="res://art/aaronsprite(2).png" id="3_jgtf7"]
[ext_resource type="PackedScene" uid="uid://cqlmw13hexw1a" path="res://scenes/state_machine/state_machine.tscn" id="4_n842b"]
[ext_resource type="Script" path="res://scenes/player/Grounded.gd" id="5_ehd6c"]
[ext_resource type="Script" path="res://scenes/player/Jump.gd" id="6_80nvj"]
[ext_resource type="Script" path="res://scenes/player/Transitions.gd" id="7_alqh6"]
[ext_resource type="Script" path="res://scenes/player/Fall.gd" id="7_l4ygo"]
[ext_resource type="Script" path="res://code/util/DamageHitbox.gd" id="7_ugaea"]
[ext_resource type="Script" path="res://scenes/player/Grapple.gd" id="9_ijx74"]
[ext_resource type="Script" path="res://scenes/player/MeleeWeapon.gd" id="10_r4qiq"]
[ext_resource type="Texture2D" uid="uid://codof3p1gelos" path="res://art/melee.png" id="11_7qifv"]
[ext_resource type="Texture2D" uid="uid://b54l47k6kwebj" path="res://art/ranged_weapon.png" id="12_umo7f"]
[ext_resource type="Script" path="res://code/player/RangedWeapon.gd" id="12_vcfcg"]
[ext_resource type="Script" path="res://code/util/DamageHurtbox.gd" id="15_eidm2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7qx6p"]
size = Vector2(16, 46)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0ta3s"]
size = Vector2(1, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_62fjr"]
size = Vector2(20, 46)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0r617"]
size = Vector2(28, 55)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4khx"]
atlas = ExtResource("3_jgtf7")
region = Rect2(0, 192, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p55gv"]
atlas = ExtResource("3_jgtf7")
region = Rect2(48, 192, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x284k"]
atlas = ExtResource("3_jgtf7")
region = Rect2(96, 192, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3hoy"]
atlas = ExtResource("3_jgtf7")
region = Rect2(144, 192, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kj0uk"]
atlas = ExtResource("3_jgtf7")
region = Rect2(192, 192, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_glosc"]
atlas = ExtResource("3_jgtf7")
region = Rect2(96, 256, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6855a"]
atlas = ExtResource("3_jgtf7")
region = Rect2(96, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mngj"]
atlas = ExtResource("3_jgtf7")
region = Rect2(144, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2oieo"]
atlas = ExtResource("3_jgtf7")
region = Rect2(240, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_863a0"]
atlas = ExtResource("3_jgtf7")
region = Rect2(288, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8j4a3"]
atlas = ExtResource("3_jgtf7")
region = Rect2(336, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uoate"]
atlas = ExtResource("3_jgtf7")
region = Rect2(0, 128, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0r8aq"]
atlas = ExtResource("3_jgtf7")
region = Rect2(144, 128, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fsm3k"]
atlas = ExtResource("3_jgtf7")
region = Rect2(48, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qj5xt"]
atlas = ExtResource("3_jgtf7")
region = Rect2(0, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uvasg"]
atlas = ExtResource("3_jgtf7")
region = Rect2(192, 0, 48, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_44xq6"]
atlas = ExtResource("3_jgtf7")
region = Rect2(96, 512, 48, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_td38p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4khx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p55gv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x284k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3hoy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kj0uk")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_glosc")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6855a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mngj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2oieo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_863a0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8j4a3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uoate")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0r8aq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fsm3k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qj5xt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uvasg")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_44xq6")
}],
"loop": true,
"name": &"sword",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6epb5"]
size = Vector2(37.5209, 4)

[sub_resource type="Animation" id="Animation_utnh1"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/Equipment/MeleeWeapon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_lv1v5"]
resource_name = "melee"
length = 0.7
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/Equipment/MeleeWeapon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-2.5929, -0.25, 0, 0.25, 0, 0.535134, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2ar1v"]
_data = {
"RESET": SubResource("Animation_utnh1"),
"melee": SubResource("Animation_lv1v5")
}

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
script = ExtResource("1_el2b0")
inventory = ExtResource("2_2ntxu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_7qx6p")

[node name="RoomFinder" type="Area2D" parent="CollisionShape2D" groups=["player_room_finder"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionShape2D/RoomFinder"]
shape = SubResource("RectangleShape2D_0ta3s")

[node name="DamageHurtbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8
script = ExtResource("15_eidm2")
i_seconds = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageHurtbox"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_62fjr")

[node name="ActionableFinder" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActionableFinder"]
visible = false
position = Vector2(-1, 6)
shape = SubResource("RectangleShape2D_0r617")

[node name="GrappleVector" type="RayCast2D" parent="."]
target_position = Vector2(0, -64)
collision_mask = 9

[node name="FloorRayCast" type="RayCast2D" parent="."]

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_td38p")
animation = &"run"

[node name="Equipment" type="Node2D" parent="Sprite"]

[node name="MeleeWeapon" type="Sprite2D" parent="Sprite/Equipment"]
visible = false
position = Vector2(3, 3)
texture = ExtResource("11_7qifv")
offset = Vector2(18.0721, -0.0463352)
script = ExtResource("10_r4qiq")

[node name="Hitbox" type="Area2D" parent="Sprite/Equipment/MeleeWeapon" groups=["player_attack"]]
position = Vector2(14.9459, 0.430408)
rotation = -0.0283733
collision_layer = 8
collision_mask = 8
monitoring = false
monitorable = false
script = ExtResource("7_ugaea")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Equipment/MeleeWeapon/Hitbox"]
shape = SubResource("RectangleShape2D_6epb5")

[node name="RangedWeapon" type="Sprite2D" parent="Sprite/Equipment" groups=["player_attack"]]
visible = false
position = Vector2(12, 0)
texture = ExtResource("12_umo7f")
script = ExtResource("12_vcfcg")

[node name="StateMachine" parent="." instance=ExtResource("4_n842b")]

[node name="States" type="Node" parent="StateMachine"]

[node name="Grounded" type="Node" parent="StateMachine/States"]
script = ExtResource("5_ehd6c")

[node name="Jump" type="Node" parent="StateMachine/States"]
script = ExtResource("6_80nvj")

[node name="Fall" type="Node" parent="StateMachine/States"]
script = ExtResource("7_l4ygo")

[node name="Grapple" type="Node" parent="StateMachine/States"]
script = ExtResource("9_ijx74")

[node name="Transitions" type="Node" parent="StateMachine"]
script = ExtResource("7_alqh6")

[node name="Timers" type="Node" parent="."]

[node name="CoyoteTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="BufferJumpTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="AttackDurationTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2ar1v")
}

[connection signal="body_entered" from="DamageHurtbox" to="." method="_on_damage_hurtbox_body_entered"]
[connection signal="damage_received" from="DamageHurtbox" to="." method="_on_damage_hurtbox_damage_received"]
[connection signal="timeout" from="Timers/AttackDurationTimer" to="." method="_on_attack_duration_timer_timeout"]
